--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1163,8 +1163,10 @@ html {
 
 body {
     background-image: url("images/overlay.png"), url("images/bg.jpg");
-    background-repeat: repeat, no-repeat;
-    background-size: auto, 100% 100%;
+    /* background-repeat: repeat, no-repeat; */
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-size: auto, 100% 100%; */
     background-attachment: fixed;
     overflow-y: scroll;
 }
@@ -1928,6 +1930,8 @@ img.is-rounded {
     /* position: absolute; */
     top: 0;
     left: 0;
+    /* margin-left: auto;
+    margin-right: auto; */
     /* width: 100%;
     height: 100%; */
     /* -moz-object-fit: cover;
@@ -2076,6 +2080,10 @@ img.is-rounded {
     #main>.panel.intro header p {
         font-size: 1em;
         margin: 0.25em 0 0 0;
+    }
+    #main>.panel.intro .pic img {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
