--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1752,6 +1752,15 @@ ul.actions li:first-child {
     border-bottom-width: 0.5em;
 }
 
+#distinguished {
+    border-radius: 12px;
+    /* width: 310px; */
+    font-weight: bold;
+    width: auto;
+    display: inline-block;
+    background: #C9C0BB;
+}
+
 @media screen and (max-width: 980px) {
     #nav a span {
         display: none;
