--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1423,7 +1423,7 @@ header {
 
 header>p {
     margin: 0.5em 0 0 0;
-    color: #aaa;
+    color: #335;
 }
 
 @media screen and (max-width: 736px) {
