--- a/assets/css/main-test.css
+++ b/assets/css/main-test.css
@@ -1443,11 +1443,7 @@ header>p {
     color: #335;
 }
 
-@media screen and (max-width: 736px) {
-    header {
-        margin: 0 0 1em 0;
-    }
-}
+
 
 
 /* Image */
@@ -1881,6 +1877,8 @@ body.is-preload #wrapper {
     #main>.panel {
         padding: 2em 1.5em 1.5em 1.5em;
     }
+
+
 }
 
 #main>.panel.intro {
@@ -2064,6 +2062,8 @@ img.is-rounded {
     margin-bottom: 0;
     width: 650px;
 }
+
+
 #home > h1{
     padding-top:2em;
     padding-left:37px;
@@ -2072,6 +2072,7 @@ img.is-rounded {
     text-align:left;
     width:100%;
 }
+
 #home > header > h2{
     padding-left:15px;
     line-height: 1.25em;
@@ -2187,10 +2188,13 @@ h3 {
 /* #main>.panel #publication ol {
     margin-bottom: 0em;
 } */
-
 #main>.panel p {
     margin-bottom: 0em;
 }
+
+
+
+
 
 @media screen and (max-width: 980px) {
     #main>.panel.intro {
@@ -2206,17 +2210,40 @@ h3 {
     }
     #main>.panel.intro header {
         padding: 4em;
-        text-align: center;
+        text-align: left;
     }
 }
-
 @media screen and (max-width: 736px) {
-    #main>.panel.intro .pic {
-        height: 20em;
+    #main>.panel {
+        padding: 2em 1.5em 1.5em 1.5em;
     }
+
     #main>.panel.intro header {
-        padding: 2.75em 2em 2.5em 2em;
+        -moz-flex-grow: 1;
+        -webkit-flex-grow: 1;
+        -ms-flex-grow: 1;
+        flex-grow: 1;
+        -moz-flex-shrink: 1;
+        -webkit-flex-shrink: 1;
+        -ms-flex-shrink: 1;
+        flex-shrink: 1;
+        padding:0em;
+        margin-bottom: 0;
+        text-align:left;
+        width: 370px;
+        padding: 1em 1em 1em 1em;
     }
+    #home > h1 {
+        padding-left:10px;
+    }
+    header {
+        margin: 0 0 1em 0;
+    }
+    
+    #main>.panel.intro .pic {
+        height: 13em;
+    }
+    
     #main>.panel.intro header p {
         font-size: 1em;
         margin: 0.25em 0 0 0;
@@ -2224,6 +2251,21 @@ h3 {
     #main>.panel.intro .pic img {
         margin-left: auto;
         margin-right: auto;
+    }
+    hr.rounded {
+       
+        margin-left:0px;
+        margin:1em 1em 0.5em 0;
+        
+    }
+      hr.rounded2 {
+        
+        margin-left:0px;
+        margin:0 1em 0.5em 0;
+        
+      }
+    #home > section {
+        padding:1em 1em 1em 1em 
     }
 }
 
