--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1181,7 +1181,7 @@ html {
 }
 
 body {
-    background-image: url("images/bg.jpg");
+    background-image: url("https://gitee.com/kaifeng-huang/page/raw/main/assets/css/images/bg.jpg");
     /* background-repeat: repeat, no-repeat; */
     background-repeat: no-repeat;
     background-size: cover;
