--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2495,7 +2495,7 @@ a:visited {
     }
 
     body {
-        background-image: url("images/bg-mobile.jpg");
+        background-image: url("images/bg-mobile2.jpg");
     }
 
 }
@@ -2503,7 +2503,7 @@ a:visited {
 @media screen and (max-width: 736px) {
 
     body {
-        background-image: url("images/bg-mobile.jpg");
+        background-image: url("images/bg-mobile2.jpg");
     }
     
     #main>.panel {
