--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1182,7 +1182,8 @@ html {
 
 body {
     /* background-image: url("images/bg.jpg"); */
-    background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg");
+    /* background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg"); */
+    background-image: url("https://i.postimg.cc/tg0mdPcw/bg.jpg");
     /* background-repeat: repeat, no-repeat; */
     background-repeat: no-repeat;
     background-size: cover;
@@ -2497,7 +2498,8 @@ a:visited {
 
     body {
         /* background-image: url("images/bg-mobile2.jpg"); */
-        background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg");
+        /* background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg"); */
+        background-image: url("https://i.postimg.cc/Dw4Mb5x1/bg-mobile2.jpg");
         
     }
 
@@ -2507,7 +2509,8 @@ a:visited {
 
     body {
         /* background-image: url("images/bg-mobile2.jpg"); */
-        background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg");
+        /* background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg"); */
+        background-image: url("https://i.postimg.cc/Dw4Mb5x1/bg-mobile2.jpg");
     }
     
     #main>.panel {
