--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1771,13 +1771,34 @@ ul.actions li:first-child {
     border-bottom-width: 0.5em;
 }
 
+#publication > section > div > ol > li > p > strong > a {
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+    color: rgb(11, 83, 148);               /* Text color */
+    background-color: transparent; /* Initial background color */
+    transition: background-color 0.3s ease; /* Smooth transition */
+    padding: 5px; /* Optional padding for better visibility */
+}
+
+#publication > section > div > ol > li > p > strong > a:hover {
+    background-color: #A5A4A0; /* Desired background color on hover */
+}
+
+
 #distinguished {
-    border-radius: 12px;
+    border-radius: 18px;
     /* width: 310px; */
     font-weight: bold;
     width: auto;
     display: inline-block;
-    background: #C9C0BB;
+    background: #A5A49F;
+}
+
+#distinguished > font {
+    margin-left: 7px;
+    margin-right: 7px;
+    color: #FFFFFF;
 }
 
 @media screen and (max-width: 980px) {
