--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1184,7 +1184,7 @@ body {
     /* background-image: url("images/bg.jpg"); */
     /* background-image: url("https://s1.imagehub.cc/images/2024/09/29/2103e4608e7b941b0a9c918b90cc18bb.jpg"); */
     /* background-image: url("https://i.postimg.cc/tg0mdPcw/bg.jpg"); */
-    background-image: url(./images/bg-small-50.jpg);
+    background-image: url(./images/bg2-small-50.jpg);
     /* background-repeat: repeat, no-repeat; */
     background-repeat: no-repeat;
     background-size: cover;
